<resources>
    <string name="app_name">BookInventory</string>
    <string name="title_booksearch">图书检索</string>
    <string name="title_shelfsearch">架位检索</string>
    <string name="title_shelfadapt">架位更新</string>
    <string name="title_shelfarrage">架位整理</string>
    <string name="title_differencemanage">差异管理</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="emptyData">暂时没有数据</string>
    <string name="tipMessage">请扫描架位标签，查询图书信息</string>
    <string name="tipshelf">当前架位信息:</string>
    <string name="tipmessage1">请扫描图书标签和架位标签,进行调整</string>
    <string name="tipmessage2">请扫描图书标签,进行调整</string>
    <string name="tipmessage3">请扫描架位标签,进行调整</string>
    <string name="tipmessage4">请扫描标签，进行盘点</string>

</resources>
